--- a/readme.org
+++ b/readme.org
@@ -8,7 +8,7 @@ The =denote-explore= package provides some convenience functions to manage your 
 This package currently provides four types of interactive Emacs functions:
 
 1. /Summary statistics/: Count and visualise keywords and note types
-2. /Random walks/: Generate new ideas using serendipity
+2. /Random walks/: Generate new ideas using serendipity [[denote:20230401T083829][Emacs Studio - Starter Kit]]
 3. /Quality assurance/: Maintain your note collection: Synchronise front matter and file names
 4. /Network visualisation/: In progress
 
@@ -32,18 +32,36 @@ Two interactive functions visualise keywords and extensions:
 2. =denote-explore-extensions-barchart=: Visualise the used file extensions for notes and attachments.
 
 ** Add Statistics to Emacs Dashboard
-You can use these functions with the [[https://github.com/emacs-dashboard/emacs-dashboard][Emacs Dashboard]] by Rakan Al-Hneiti and others. The code snippet below adds a count of your notes and keywords to the bottom of your dashboard. 
+You can also explore Denote with the [[https://github.com/emacs-dashboard/emacs-dashboard][Emacs Dashboard]] by Rakan Al-Hneiti and others. The code snippet below adds a count of your notes and keywords to the bottom of your dashboard.  This setup also requires the [[https://github.com/domtronn/all-the-icons.el][all-the-icons package]] for some embellishments.
 
-#+begin_src elisp :result none
+#+begin_src elisp :results none
   (defun dashboard-insert-denote-stats (list-size)
-    (insert (concat
-             (denote-explore-count-notes) " | "
-             (denote-explore-count-keywords))))
+    "Helper function to display Denote summary on the Emacs Dashboard.
+    LIST-SIZE is a dummy variable required by the dashboard package."
+    (dashboard-insert-heading "Denote:"
+                              "d"
+                              (all-the-icons-octicon
+                               "file-text"
+                               :height 1.2
+                               :v-adjust 0.0
+                               :face 'dashboard-heading))
+    (let ((prefix (concat "    "
+                          (all-the-icons-octicon
+                           "primitive-dot"
+                           :height 1.0
+                           :v-adjust 0.01)
+                          "   ")))
+      (insert "\n")
+      (insert (concat prefix (denote-explore-count-notes) "\n"))
+      (insert (concat prefix (denote-explore-count-keywords))))
+    (dashboard-insert-shortcut 'denote "d" "Denote:"))
 
   (add-to-list 'dashboard-item-generators
                '(denote . dashboard-insert-denote-stats))
 
   (add-to-list 'dashboard-items '(denote) t)
+
+  (add-to-list 'dashboard-item-shortcuts '(denote . "d"))
 #+end_src
 
 If you like to change the location of the Denote statistics, then modify =dashboard-items= to your satisfaction. This is a simple example, a more sophisticated version with hyperlinks is in the making.
