--- a/readme.org
+++ b/readme.org
@@ -1,7 +1,7 @@
 #+title:  Denote Explore: Statistics, Random Walks and Networks
 #+author: Peter Prevos
 
-The [[https://protesilaos.com/emacs/denote][Denote package]] by Protesilaos (Prot) Stavropol provides extensive functionality to create, retrieve, manage and link notes in plain text, Markdown and Org Mode. The most redeeming qualities of this package are its filename convention and modular simplicity. Denote provides many entry points to extend functionality and use your computer the way you want to instead of the other way around.
+The [[https://protesilaos.com/emacs/denote][Denote package]] by Protesilaos (Prot) Stavropol provides extensive functionality to create, retrieve, manage and link notes in plain text, Markdown and Org Mode. The most redeeming qualities of this package are its filename convention and modular simplicity. Denote provides many entry points to extend functionality.
 
 The =denote-explore= package provides some convenience functions to manage your file collection. This package is still under development, so not everything might work as expected.
 
@@ -12,7 +12,7 @@ This package currently provides four types of interactive Emacs functions:
 3. /Quality assurance/: Maintain your note collection: Synchronise front matter and file names
 4. /Network visualisation/: In progress
 
-This package distinguishes between Denote files and attachments. Denote files are either Org Mode, Markdown or Plan Text (those listed in the =denote-file-types= variable). All other files are considered attachments, e.g. photographs, PDFs, media files and so on). 
+This package distinguishes between Denote files and attachments. Denote files are either Org Mode, Markdown or Plan Text (those listed in the =denote-file-types= variable). All other files are considered attachments, e.g. photographs, PDFs, media files and so on).
 
 * Summary Statistics
 After a day of working hard on your digital knowledge garden, you might like to know how many Denote files you have written and how many keywords you use. Two functions can help you answer these questions:
