--- a/readme.org
+++ b/readme.org
@@ -26,6 +26,12 @@ Alternatively, you can use the most recent development from GitHub:
 #+end_src
 
 * Change Log
+** Version 1.3
+- Added [[https://graphviz.org/][GraphViZ visualisation]] option (=denote-explore-network-graphviz=) and command to save metadata as GraphViz file.
+- Using a single JSON file that can be used in either R or Python
+- Refactoring code to optimise network generation
+- Fixed bug in =denote-explore--retrieve-title=.
+
 ** Version 1.2
 - Removed =pandoc= dependency in network generation
 - The ~denote-explore-identify-duplicate-identifiers~ is replaced by ~denote-explore-identify-duplicate-notes~. This new version either detects duplicate identifiers, or duplicate file names (using the universal argument). Comparing duplicate filenames ignores any duplicate identifiers caused by exporting Org mode files.
